Added filters to deploy job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,3 +45,8 @@ workflows:
       - deploy:
           requires:
             - strip
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /v.*/
